--- a/sudoku-vue/package.json
+++ b/sudoku-vue/package.json
@@ -20,6 +20,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.38.0",
+    "happy-dom": "^20.0.6",
     "jsdom": "^27.0.1",
     "prettier": "^3.6.2",
     "typescript": "~5.9.3",
