--- a/sudoku-vue/package.json
+++ b/sudoku-vue/package.json
@@ -26,6 +26,9 @@
     "typescript": "~5.9.3",
     "vite": "^4.5.0",
     "vitest": "^3.2.4",
-    "vue-tsc": "^3.1.0"
+    "vue-tsc": "^3.1.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   }
 }
