--- a/sudoku-vue/package.json
+++ b/sudoku-vue/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.5.22"
@@ -19,16 +20,17 @@
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.38.0",
+    "gh-pages": "^6.3.0",
     "happy-dom": "^20.0.6",
     "jsdom": "^27.0.1",
+    "postcss": "^8.4.47",
     "prettier": "^3.6.2",
+    "tailwindcss": "^3.4.14",
     "typescript": "~5.9.3",
     "vite": "^4.5.0",
     "vitest": "^3.2.4",
-    "vue-tsc": "^3.1.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "vue-tsc": "^3.1.0"
   }
 }
